# DonPito

./: .bash_history  .gitignore  DonPito.ppk  ToDoPito.txt  actjson.py  comandos.json  main.py  main.py.save  main.py.save.1  modos.json  niveles.json  padawans.json  pito.py  pruebabot.py  pyproject.toml  tdform.py  wave_gen.py
cogs/: ejemplo1.py
mp3s/: descartes.txt
piano/: info.json
